samples/_failures_safe/1761126887_375e10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fa4e245.c: In function ‘main’:
./samples/SAFE/__tmp_4fa4e245.c:166:5: error: expected declaration or statement at end of input
  166 |     }
      |     ^
